--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -1,7 +1,7 @@
 <h1>Hi,</h1>
 <h1>My name is <b>Ivan</b></h1>
 
-<span>I'm a developer with experience in .NET.</span>
-<span>My focus is on writing efficient and maintainable code, </span>
-<span>and I'm proud of my work on a complex applications. </span>
-<span>I'm eager to continue developing my skills</span>
+<h3>I'm a developer with experience in .NET.
+<h3>My focus is on writing efficient and maintainable code,
+<h3>and I'm proud of my work on a complex applications.
+<h3>I'm eager to continue developing my skills
