--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,38 @@
-<header class="p-3 bg-dark text-white">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-      </a> 
+<div class="container-flex">
+  <header class="p-3 bg-dark text-white">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+            <use xlink:href="#bootstrap"></use>
+          </svg>
+        </a>
 
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <!-- <li><a href="#" class="btn btn-warning">Home</a></li> -->
-          <li><a href="#" style="font-size : 18px" class ="btn btn-outline-light me-2">Home</a></li>
-        <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Features</a></li>
-        <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Pricing</a></li>
-        <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">FAQs</a></li>
-        <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">About</a></li>
-      </ul>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <!-- <li><a href="#" class="btn btn-warning">Home</a></li> -->
+          <li><a href="#" style="font-size : 18px" class="btn btn-outline-light me-2">Home</a></li>
+          <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Features</a></li>
+          <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Pricing</a></li>
+          <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">FAQs</a></li>
+          <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">About</a></li>
+        </ul>
 
-      <div class="text-end">
-        <button type="button" class="btn btn-warning me-lg-auto">Contact</button>
+        <div class="text-end">
+          <button type="button" class="btn btn-warning me-lg-auto">Contact</button>
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
+
+  <body (mousemove)="onMouseMove($event)">
+    <div class="position-relative">
+      <img src="assets/human.png" class="human-image" style="width: 350px;">
+      <img src="assets/eyes.png" id="movingImage" class="eyes-image" style="width: 190px;">
+
+    </div>
+    <div class="text-center">
+      <app-about></app-about>
+    </div>
+
+  </body>
+</div>
