--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
 
     <body>
       <app-about></app-about>
-      <iframe  width="1200" height="1250" [src]="getUrl('http://localhost:4200/budget?id=D4G7nhbs4y')" frameborder="0"></iframe>
+      <!-- <iframe  width="1200" height="1250" [src]="getUrl('http://localhost:4200/budget?id=D4G7nhbs4y')" frameborder="0"></iframe> -->
 
       <iframe src="http://localhost:4200/budget?id=D4G7nhbs4y" scrolling="no" style="width: 1200px; height: 1250px; display: block; margin: auto; position: relative; top: 0; bottom: 0; left: 0; right: 0;"> </iframe>
 
