--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <body (mousemove)="onMouseMove($event)">
+  <!-- <body (mousemove)="onMouseMove($event)">
     <div class="position-relative">
       <img src="assets/human.png" class="human-image" style="width: 350px;">
       <img src="assets/eyes.png" id="movingImage" class="eyes-image" style="width: 190px;">
@@ -32,7 +32,7 @@
     </div>
     <div class="text-center">
       <app-about></app-about>
-    </div>
+    </div> -->
 
     <body>
       <!-- <iframe  width="1200" height="1250" [src]="getUrl('http://pf1.auf.co.uk//budget?id=D4G7nhbs4y')" frameborder="0"></iframe> -->
@@ -41,5 +41,5 @@
       <iframe [src]="getUrl('http://localhost:4200//budget?id=D4G7nhbs4y')" scrolling="no" style="width: 1200px; height: 1250px; display: block; margin: auto; position: relative; top: 0; bottom: 0; left: 0; right: 0;"> </iframe>
 
     </body>
-  </body>
+  <!-- </body> -->
 </div>
