--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,13 @@
           </svg>
         </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <!-- <li><a href="#" class="btn btn-warning">Home</a></li> -->
+        <!-- <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" style="font-size : 18px" class="btn btn-outline-light me-2">Home</a></li>
           <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Features</a></li>
           <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">Pricing</a></li>
           <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">FAQs</a></li>
           <li><a href="#" (click)="scrollToSection('section1')" class="nav-link px-2 text-white">About</a></li>
-        </ul>
+        </ul> -->
 
         <div class="text-end">
           <button type="button" class="btn btn-warning me-lg-auto">Contact</button>
