--- a/src/about/about.component.scss
+++ b/src/about/about.component.scss
@@ -3,3 +3,17 @@ span {
     font-family:  sans-serif;
             font-weight: 300; /* Roboto Light */
 }
+
+.human-image {
+    display: block;
+    margin: 0 auto;
+    z-index: 1;
+}
+
+.eyes-image {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
