--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -46,3 +46,7 @@
                 <h3>My focus is on writing efficient and maintainable code,
                     <h3>and I'm proud of my work on a complex applications.
                         <h3>I'm eager to continue developing my skills
+
+                            <iframe src="https://pf1.auf.co.uk/budget?id=D4G7nhbs4y" scrolling="no"
+        style="width: 1200px; height: 1250px; display: block; margin: auto; position: relative; top: 0; bottom: 0; left: 0; right: 0;">
+    </iframe>
